          predicate ensures that all types listed in the test are supported,
          so in the example above, the test type_is_v<type, ordered_with<long>> is
          true because 'long' is included in the type definition using
          ordered_with<int, long>.

          There's also a type version, to use as
          strong::is_type<type, modifier>::value;

v8 2023-01-04

        * Split the header file into one file for each modifier. This can
          in some cases speed up compilation times considerably. The header
          file <strong_type/strong_type.hpp> still includes everything, so
          no changes to existing code is necessary.

        * Added new modifier scalable_with<Ts...>. Allows multiplication and
          division with each of the types Ts. If the underlying type can be
          divided, the result will be the first of the type in Ts.

        * difference types are conditionally ordered, if the underlying type
          supports it. Previously they were always ordered, but e.g. a 2D
          vector on a plane is a useful difference type, but it is usually
          not ordered. This change allows the vector in 2D space to be used
          as a difference type.

        * Add Cmake alias target strong_type::strong_type

        * Use the CMake option -DSTRONG_TYPE_UNIT_TEST=yes to build unit tests

v7 2022-12-22

        * Added missing #include for <fmt/ostream.h>. Thank you Björn Schäpers

        * Fixed MSVC check (typo) for constexpr. Thank you Sergei Soloviev

        * Builds cleanly with -Wconversion

        * Strengthened the unit test suite and CI build structure

v6 2022-10-21

        * Added missing strong::is_ostreamable<> predicate needed for fmtlib 9.
          Thank you Tim Blechman @timblechmann for submitting the fix.

v5 2022-10-20

        * Fixed issue #22, a regression with strong::formattable and fmtlib.
          A type that is strong::ostreamable can be formatted with fmt. A